# chart-mcp-server

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: main_optimized.py
