[project]
name = "chart-mcp-server"
version = "0.1.0"
description = "MCP服务器，提供多种图表生成功能"
authors = [
    {name = "Jiang", email = "jiang@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "kaleido>=0.2.1",
    "pillow>=10.0.0",
    "wordcloud>=1.9.0",
    "pyecharts>=1.9.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
